--- a/src/components/Header/component/Item.scss
+++ b/src/components/Header/component/Item.scss
@@ -2,50 +2,116 @@
 @import "../../../sass/variables";
 @import "../../../sass/breakPoints";
 
-.link {
-    a,
-    .span {
-        text-decoration: none;
-        text-transform: capitalize;
-        font-family: $poppins;
-        margin: 0px 1rem;
-        color: $secondary;
-        font-size: 18px;
-        font-weight: 300;
+ul {
+  padding: 0px !important;
+  list-style: none;
+  flex-direction: row;
+  gap: 10px;
+
+  li {
+    display: block;
+    &:hover a::before {
+      left: 0;
+      transition: 0.4s;
     }
 
-    @include media("<lg") {
-        & {
-            padding: 10px 0;
-            width: fit-content;
-            margin: 0px auto;
-            cursor: pointer;
-            &:hover a {
-                color: $secondary;
-                background-color: $primary;
-                padding: 5px;
-                border-radius: 6px;
-            }
-            &:hover .span {
-                color: $secondary;
-                background-color: $primary;
-                padding: 5px;
-                border-radius: 6px;
-            }
-            // a,
-            // .span {
-            //     // font-weight: 400px;
-            // }
-            a {
-                color: $primary;
-                font-weight: 400 !important;
-            }
-            .span {
-                color: $primary;
-                margin: 0px auto;
-                font-weight: 900;
-                font-size: 20px;
-            }
-        }
+    a {
+      text-decoration: none;
+      text-transform: capitalize;
+      font-family: $poppins;
+      color: $secondary;
+      font-size: 18px;
+      font-weight: 400;
+      width: fit-content;
+
+      padding: 5px;
+      position: relative;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: -100%;
+        width: 100%;
+        height: 1px;
+        background-color: $secondary;
+      }
     }
+    &:hover a {
+      color: $secondary;
+    }
+  }
+  @include media("<lg") {
+    position: absolute;
+    top: 78%;
+    right: -1%;
+    z-index: 5;
+    background-color: $alternate;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+
+    width: 235px;
+    &::before {
+      content: "";
+      position: absolute;
+      top: -24px;
+      right: 31px;
+      border-style: solid;
+      border-width: 13px;
+      border-color: transparent transparent #373737 transparent;
+    }
+    &.active {
+      display: block !important;
+    }
+
+    li {
+      padding: 10px 20px;
+      display: flex;
+      align-items: center;
+
+      &:hover {
+        background-color: $primary;
+      }
+      &:hover a {
+        color: $secondary;
+      }
+      &:hover span {
+        color: $secondary;
+      }
+      a,
+      span {
+        color: $secondary;
+        cursor: pointer;
+      }
+      span {
+        color: white;
+        font-size: 38px;
+        margin-right: 15px;
+        align-items: center;
+        display: flex;
+        margin-left: 28px;
+        font-size: 30px;
+      }
+
+      a {
+        margin: 0px;
+        text-decoration: none;
+        text-transform: capitalize;
+        font-family: "Poppins", sans-serif;
+        color: #f4f4f4;
+        font-size: 18px;
+        font-weight: 400;
+        width: -moz-fit-content;
+        width: fit-content;
+        padding: 5px;
+        position: relative;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
 }
