--- a/src/components/Header/component/Item.scss
+++ b/src/components/Header/component/Item.scss
@@ -1,4 +1,5 @@
-@import "../../../sass/fonts";@import "../../../sass/variables";
+@import "../../../sass/fonts";
+@import "../../../sass/variables";
 @import "../../../sass/breakPoints";
 
 ul {
@@ -57,7 +58,7 @@ ul {
       content: "";
       position: absolute;
       top: -24px;
-      right: 31px;
+      right: 13px;
       border-style: solid;
       border-width: 13px;
       border-color: transparent transparent #373737 transparent;
