--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -1,4 +1,5 @@
-@import "../../sass/breakPoints";@import "../../sass/variables";
+@import "./breakPoints";
+@import "./variables";
 
 .header {
   min-height: 100px;
