--- a/src/sass/Links.scss
+++ b/src/sass/Links.scss
@@ -1,6 +1,5 @@
-@import "../../../sass/fonts";
-@import "../../../sass/variables";
-@import "../../../sass/breakPoints";
+@import "./fonts";@import "./variables";
+@import "./breakPoints";
 
 ul {
   padding: 0px !important;
