--- a/src/sass/About.scss
+++ b/src/sass/About.scss
@@ -1,13 +1,9 @@
-@import "./_variables.scss";
-@import "./mixins";
+@import "./_variables.scss";@import "./mixins";
 @import "./breakPoints";
 
 .about {
   background-image: url(../assets/images/pexels-henry-&-co-1939485.jpg);
-  //   background-image: url(../../assets/images/pexels-henry-&-co-1939485.jpg);
   background-size: cover;
-  // background: url(../../assets/images/pexels-henry-&-co-1939485.jpg) top
-  //     right/cover no-repeat;
 
   @include padding;
   text-align: center;
