--- a/src/sass/Contact.scss
+++ b/src/sass/Contact.scss
@@ -1,4 +1,5 @@
-@import "../..//sass/mixins";@import "../..//sass/breakPoints";
+@import "./mixins";
+@import "./breakPoints";
 .Contact {
   min-height: 50vh;
   padding: 60px 0px 60px;
@@ -77,9 +78,6 @@
         max-width: 379px;
         transform: translate(-50%, 11%);
         left: 50%;
-        // max-width: 250px;
-        // transform: translate(-50%, 22%);
-        // left: 50%;
       }
       .Right {
         width: auto;
