--- a/src/sass/Projects.scss
+++ b/src/sass/Projects.scss
@@ -1,6 +1,8 @@
-@import "./variables";@import "./mixins";
+@import "./variables";
+@import "./mixins";
 
 .Projects {
   background-color: $secondary;
   padding: 60px 0px 110px;
+  position: relative;
 }
