--- a/src/sass/Modal.scss
+++ b/src/sass/Modal.scss
@@ -1,5 +1,4 @@
-.Modal {
-  width: clamp(50%, 1000px, 90%);
+.Modal {  width: clamp(50%, 1000px, 90%);
   //   height: min(50%, 300px);
   height: 600px;
   margin: auto;
@@ -8,4 +7,28 @@
   align-items: center;
   flex-direction: column;
   background-color: #fff;
+
+  .wrapper {
+    overflow: hidden;
+    height: 543px;
+    width: 508px;
+  }
+
+  img {
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    max-width: 100%;
+  }
+
+  a {
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    font-size: 21px;
+    &:hover {
+      color: black;
+    }
+  }
 }
