--- a/src/sass/Modal.scss
+++ b/src/sass/Modal.scss
@@ -1,6 +1,8 @@
-.Modal {  width: clamp(50%, 1000px, 90%);
+@import "./breakPoints";
+.Modal {
+  width: clamp(50%, 1000px, 90%);
   //   height: min(50%, 300px);
-  height: 600px;
+  height: 625px;
   margin: auto;
   border-radius: 12px;
   display: flex;
@@ -10,8 +12,8 @@
 
   .wrapper {
     overflow: hidden;
-    height: 543px;
-    width: 508px;
+    max-height: 568px;
+    max-width: 95%;
   }
 
   img {
@@ -29,6 +31,24 @@
     font-size: 21px;
     &:hover {
       color: black;
+    }
+  }
+
+  @include media("<tablet") {
+    .wrapper {
+      max-width: 100% !important;
+      max-height: 270px;
+    }
+    .tech {
+      line-height: 19px;
+    }
+  }
+  @include media("<phone") {
+    .tech {
+      line-height: 15px;
+    }
+    a {
+      font-size: 17px;
     }
   }
 }
